--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,12 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
   lints: ^4.0.0
   test: ^1.24.0
+
+flutter:
+  uses-material-design: true
