--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_auth: ^3.4.0
+  flutter_svg_provider: ^1.0.7
+  cached_network_image: ^3.4.1
+  marquee_widget: ^1.2.0
 
 dev_dependencies:
   lints: ^4.0.0
