--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter_svg_provider: ^1.0.7
   cached_network_image: ^3.4.1
   marquee_widget: ^1.2.0
+  firebase_database: ^9.0.17
+  cloud_firestore: ^3.2.0
+#  file_saver: ^0.2.14
 
 dev_dependencies:
   lints: ^4.0.0
